# wepublic_defender

./: .env.example  .gitignore  README.md  _tmp_readme.txt  _tmp_schema.py  pyproject.toml  requirements.txt  setup.py
.claude/: CLAUDE.md  COMMANDS_REFERENCE.md  LEGAL_WORK_PROTOCOL.md  SESSION_START_MANDATORY.md
.claude/commands/: check_env.md  deep-research-prep.md  draft.md  organize.md  research.md  review.md  start.md  strategy.md  timeline.md
.claude/hooks/: PreCompact.bat  PreCompact.sh  SessionStart  SessionStart.bat  SessionStart.sh  UserPromptSubmit.bat
.claude/proposals/: dynamic_case_features_roadmap.md
.claude/templates/: case_timeline_template.md  session_notes_template.md  settings.local.json  settings.local.windows_overrides.json
.claude/workflows/: first_case_init.md  legal_document_workflow.md  post_compact_recovery.md  session_start_checklist.md
.github/workflows/: pr-review.yml  tests.yml  update-wiki.yml
.wepublic_defender/: case_config.json  legal_review_settings.json
_wiki/: API-Reference.md  Advanced-Features.md  Basic-Usage.md  Best-Practices.md  Code-Examples.md  Complete-Beginner-Setup.md  Configuration.md  Cost-Guide.md  Deep-Research-Workflow.md  File-Organization.md  Getting-Started.md  Glossary.md  Home.md  Installation-Guide.md  Integration-Patterns.md  Migration-Guides.md  Performance-Optimization.md  Quick-Reference.md  Review-Pipeline.md  Session-Start-Automation.md  Slash-Commands-Reference.md  Troubleshooting.md  _Footer.md  _Sidebar.md
scripts/: check_env.py  init_case_directory.py  organize_inbox.py  run_agent.py
tests/: __init__.py
tests/debugging/: __init__.py  test_opposing_counsel_schema.py
tests/unit/: __init__.py  conftest.py  test_config_loaders.py  test_convert_to_word.py  test_core.py  test_document_handlers.py  test_legal_responses.py  test_token_tracker.py
wepublic_defender/: .env.example  __init__.py  claude_integration.py  core.py  document_handlers.py  llm_client.py  llm_client_doctests_temp.py  logging_utils.py  research_log.py  usage_logger.py
wepublic_defender/cli/: __init__.py  check_env.py  convert_to_word.py  deep_research_prompt.py  file_log.py  find_citations.py  init_case.py  review_pipeline.py  run_agent.py  usage_summary.py  verify_citation.py
wepublic_defender/config/: __init__.py  batch_citations.example.json  legal_review_settings.json  llm_providers.json
wepublic_defender/models/: __init__.py  (+3 more)
(+21 files in other folders)
