[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wepublic_defender"
version = "0.1.0"
description = "Adversarial Legal Review System using multiple AI providers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["legal", "review", "ai", "adversarial", "gpt", "grok", "openai"]
authors = [
    {name = "Jack"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "json5>=0.9.0",
    "rich>=13.0.0",
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "aiofiles>=23.0.0",
    "typing-extensions>=4.0.0",
    "xai-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/wepublic_defender"
Documentation = "https://github.com/yourusername/wepublic_defender"
Repository = "https://github.com/yourusername/wepublic_defender"

[tool.setuptools]
packages = [
    "wepublic_defender",
    "wepublic_defender.models",
    "wepublic_defender.cli",
]

[tool.setuptools.package-data]
wepublic_defender = ["config/*.json"]

[project.scripts]
wpd-run-agent = "wepublic_defender.cli.run_agent:main"
wpd-check-env = "wepublic_defender.cli.check_env:main"
wpd-init-case = "wepublic_defender.cli.init_case:main"
wpd-review-pipeline = "wepublic_defender.cli.review_pipeline:main"
wpd-find-citations = "wepublic_defender.cli.find_citations:main"
wpd-verify-citation = "wepublic_defender.cli.verify_citation:main"
wpd-file-log = "wepublic_defender.cli.file_log:main"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
